force-app/main/default/objects/Opportunity/fields/Admission_Stage__c.field-meta.xml
<CustomField>
    <fullName>Admission_Stage__c</fullName>
    <label>Admission Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>