force-app/main/default/objects/Opportunity/fields/Counselor_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Counselor_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counselor Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>