force-app/main/default/objects/Opportunity/validationRules/Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Expected Start Date cannot be in the past</errorMessage>
</ValidationRule>